@@ -1,3 +1,7 @@
+2015-05-23  Mark Wielaard  <mjw@redhat.com>
+
+	* eu.am (AM_CFLAGS): Add -Wstack-usage=262144.
+
 2015-04-23  Max Filippov  <jcmvbkbc@gmail.com>
 
 	* eu.am (DEFS.os): New variable.
